# Hichem-AI

./: -w  PROJECT_ANALYSIS.md  products to look at .xlsx  ~$products to look at .xlsx
image-factory/: .dockerignore  .env.example  .gitignore  ANALYSIS_SUMMARY.md  API_KEYS_SETUP.md  COMPLETE_WORKFLOW_GUIDE.md  DEPLOYMENT.md  FINAL_STATUS.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_ARCHITECTURE.md  QUICK_START.md  README.md  ROBUSTNESS_CHECKLIST.md  SMOKE_TEST_DRY_RUN_GUIDE.md  SYSTEM_SETUP_GUIDE.md  debug_temu.py  debug_temu2.py  docker-compose.ngrok.yml  docker-compose.tailscale.yml  docker-compose.yml  gen_request.json  imagefactory.db  monitor.ps1  pyproject.toml  test_1688.py  test_comprehensive.py  test_pdf_links.py  test_products.xlsx  test_scraper.py  validate_deployment.py
image-factory/api/: app.py  dependencies.py
image-factory/configs/: logging.py  pricing.py  settings.py  user_agents.txt
image-factory/dashboard/: .env.local.example  next.config.ts  package.json  tailwind.config.ts
image-factory/database/: __init__.py  repository.py  session.py
image-factory/docker/: Dockerfile.api  Dockerfile.base  Dockerfile.dashboard  Dockerfile.worker
image-factory/models/: __init__.py  asset.py  enums.py  job.py
image-factory/requirements/: api.txt  base.txt  worker.txt
image-factory/scripts/: gcp-billing-checker.ts  migrate_translations.py  recover_pending.py  reset_system.py  start-ngrok.ps1
image-factory/services/: admin_notifier.py  cleanup.py  consumption_analysis.py  event_bus.py  notifications.py  reference_scoring.py  scrapfly_key_manager.py  scrapfly_rotation.py  utils.py  (+4 more)
(+212 files in other folders)
